[gd_scene load_steps=4 format=3 uid="uid://btvpvkxfmk8xq"]

[ext_resource type="Texture2D" uid="uid://c6pf6ym1eyedg" path="res://Assets/badMan.png" id="1_2pb1h"]
[ext_resource type="Script" uid="uid://dy6eyrklcjua6" path="res://Scripts/enemy.gd" id="1_px1sc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2pb1h"]
radius = 11.0
height = 22.0

[node name="Enemy" type="Area2D"]
position = Vector2(500, 300)
collision_layer = 8
collision_mask = 3
script = ExtResource("1_px1sc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2pb1h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_2pb1h")

[node name="ShootTimer" type="Timer" parent="."]

[node name="Rotator" type="Node2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="." to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
